--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #F7CAC9;
+    color: #86e0f6;
     outline: none;
     text-decoration: none;
 }
@@ -41,7 +41,7 @@ a:focus {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #F7CAC9;
+    background: #86e0f6;
     width: 44px;
     height: 44px;
     text-align: center;
@@ -58,7 +58,7 @@ a:focus {
 }
 
 .back-to-top:hover i {
-    color: #F7CAC9;
+    color: #86e0f6;
 }
 
 .back-to-top i {
@@ -273,7 +273,7 @@ a:focus {
     width: 100%;
     margin-bottom: 45px;
     padding: 90px 0;
-    background: #F7CAC9;
+    background: #86e0f6;
     overflow: hidden;
 }
 
@@ -318,7 +318,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -406,7 +406,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 150px 0 90px 0;
     text-align: center;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 .page-header h2 {
@@ -481,7 +481,7 @@ a:focus {
     top: 11px;
     right: -30px;
     left: -30px;
-    background: #F7CAC9;
+    background: #86e0f6;
     z-index: -1;
 }
 
@@ -536,7 +536,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -544,7 +544,7 @@ a:focus {
 
 .about .about-text a.btn:hover {
     color: #343148;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 @media (max-width: 767.98px) {
@@ -608,7 +608,7 @@ a:focus {
     display: block;
     width: 80px;
     height: 80px;
-    background: #F7CAC9;
+    background: #86e0f6;
     border-radius: 50%;
     animation: pulse-border 2000ms ease-out infinite;
 }
@@ -623,7 +623,7 @@ a:focus {
     display: block;
     width: 80px;
     height: 80px;
-    background: #F7CAC9;
+    background: #86e0f6;
     border-radius: 50%;
     transition: all 200ms;
 }
@@ -648,7 +648,7 @@ a:focus {
 
 .service .service-item:hover h3,
 .service .service-item.active h3 {
-    color: #F7CAC9;
+    color: #86e0f6;
 }
 
 .service .service-item p {
@@ -669,7 +669,7 @@ a:focus {
     width: 100%;
     margin: 45px 0;
     padding: 90px 0;
-    background: linear-gradient(rgba(247, 202, 201, .7), rgba(247, 202, 201, .7)), url(../img/discount-bg.png);
+    background: linear-gradient(#86e0f6), (#86e0f6) url(../img/discount-bg.png);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -709,7 +709,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -774,14 +774,14 @@ a:focus {
     justify-content: center;
     border-radius: 40px;
     font-size: 16px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     opacity: 0;
 }
 
 .team .team-social a:hover {
     color: #343148;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 
@@ -854,7 +854,7 @@ a:focus {
     font-size: 25px;
     color: #343148;
     margin-bottom: 15px;
-    border: 1px solid #F7CAC9;
+    border: 1px solid #86e0f6;
     border-radius: 50px;
 }
 
@@ -886,7 +886,7 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     border-radius: 0;
     transition: .3s;
@@ -894,7 +894,7 @@ a:focus {
 
 .contact .contact-form .btn:hover {
     color: #343148;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 .contact .help-block ul {
@@ -938,7 +938,7 @@ a:focus {
     height: 2px;
     bottom: 0;
     left: 0;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 .sidebar .sidebar-widget .search-widget {
@@ -962,7 +962,7 @@ a:focus {
     height: 40px;
     padding: 0;
     font-size: 25px;
-    color: #F7CAC9;
+    color: #86e0f6;
     background: none;
     border-radius: 0;
     border: none;
@@ -982,7 +982,7 @@ a:focus {
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
     border-radius: 0;
 }
@@ -990,7 +990,7 @@ a:focus {
 .sidebar .tab-post .nav.nav-pills .nav-link:hover,
 .sidebar .tab-post .nav.nav-pills .nav-link.active {
     color: #343148;
-    background: #F7CAC9;
+    background: #86e0f6;
 }
 
 .sidebar .tab-post .tab-content {
@@ -1030,7 +1030,7 @@ a:focus {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    color: #F7CAC9;
+    color: #86e0f6;
     left: 1px;
 }
 
@@ -1055,7 +1055,7 @@ a:focus {
 }
 
 .single .tag-widget a:hover {
-    color: #F7CAC9;
+    color: #86e0f6;
     background: #343148;
 }
 
@@ -1101,7 +1101,7 @@ a:focus {
 
 .footer .footer-info .footer-logo {
     display: inline-block;
-    color: #F7CAC9;
+    color: #86e0f6;
     font-size: 60px;
     line-height: 60px;
     font-weight: 700;
@@ -1162,7 +1162,7 @@ a:focus {
 }
 
 .footer .footer-social a:hover i {
-    color: #F7CAC9;
+    color: #86e0f6;
 }
 
 .footer .copyright {
@@ -1191,7 +1191,7 @@ a:focus {
 }
 
 .footer .copyright p a:hover {
-    color: #F7CAC9;
+    color: #86e0f6;
 }
 
 @media (max-width: 767.98px) {
